[metadata]
name = pecanpy
version = 2.0.7
author = Remy Liu
author_email = liurenmi@msu.edu
description = A parallelized, efficient, and accelerated node2vec
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/krishnanlab/PecanPy
project_urls =
    Documentation = https://pecanpy.readthedocs.io/

# License
license_files = file: LICENSE
license = BSD 3-Clause License

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    Network Embedding

[options]
install_requires =
    gensim>=4.1.0
    numpy>=1.20.0
    numba>=0.46.0,<0.57.0
    numba-progress>=0.0.2
    nptyping>=2.0.0

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pecanpy = pecanpy.cli:main
