[metadata]
name = pecanpy
version = 2.0.10-dev
author = Remy Liu
author_email = liurenmi@msu.edu
description = A parallelized, efficient, and accelerated node2vec
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/krishnanlab/PecanPy
project_urls =
    Documentation = https://pecanpy.readthedocs.io/

# License
license_files = file: LICENSE
license = BSD 3-Clause License

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    Network Embedding

[options]
install_requires =
    gensim>=4.1.0
    numpy>=1.20.0
    numba>=0.46.0
    numba-progress>=0.0.2
    nptyping>=2.0.0
    typing_extensions>=4.0.1

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    bump2version==1.0.1
    mypy==1.8.0
    parameterized==0.9.0
    pre-commit==3.5.0; python_version < "3.9"
    pre-commit==3.6.1; python_version >= "3.9"
    pytest-cov==4.1.0
    pytest-xdist==3.5.0
    pytest==8.0.2
    tox==4.12.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pecanpy = pecanpy.cli:main
